# wealthica-sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: README.md
examples/basic/: .env.example  README.md  basic.py  flask_server.py  requirements.txt
examples/basic/templates/: index.html
src/wealthica/: __init__.py  client.py  constants.py  exceptions.py
src/wealthica/resources/: __init__.py  base.py  history.py  institutions.py  positions.py  providers.py  teams.py  transactions.py
tests/: test_client.py  test_resources.py
